Fix navbar shift with scrollbar-gutter: stable

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,3 +1,6 @@
+html {
+  scrollbar-gutter: stable;
+}
 body {
   font-family: "Montserrat";
 }
